--- a/panda_tv/CSS/new.css
+++ b/panda_tv/CSS/new.css
@@ -146,7 +146,7 @@ li,strong{
 	font-size: 16px;
 	cursor: pointer;
 }
-.ph-nav_item--current a{
+.ph-nav_item a:hover{
 	background: #ae1a16;
 	color: #fff;
 }
