--- a/华容道/1.css
+++ b/华容道/1.css
@@ -19,15 +19,16 @@ left: 0;
 bottom: 0;
 right: 0;	
 margin: auto;
-	width: 640px;
-	height: 400px;
-	background:url(bg.png) repeat;
+	width: 960px;
+	height: 600px;
+	background:url('img/bg.png') no-repeat;
+	background-size: 960px 600px;
 }
 .right{
 	float: left;
-	width: 320px;
-	height: 400px;
-	background: url(bg.png);
+	width: 480px;
+	height: 600px;
+	background: url('img/bg.png');
 	background-size:cover;
 	font-size: 14px;
 	color: darkorange;
@@ -39,78 +40,77 @@ li{
 }
 li.hi img{
 	display: block;
-	height: 160px;
-	width: 80px;
+	height: 240px;
+	width: 120px;
 }
 li.hw img{
 	display: block;
-	height: 160px;
-	width: 160px;
+	height: 240px;
+	width: 240px;
 }
 li.xiao img{
 	display: block;
-	height: 80px;
-	width: 80px;
+	height: 120px;
+	width: 120px;
 }
 li.wi img{
 	display: block;
-	height: 80px;
-	width: 160px;
+	height: 120px;
+	width: 240px;
 }
 ul{
 	float: left;
 	position: relative;
-	width: 320px;
-	height:400px;
-	background: url(ck.png) no-repeat;
-	background-position: 80px 320px;
+	width: 480px;
+	height:600px;
+	background: url('img/ck.png') no-repeat;
+	background-position: 120px 480px;
+	background-size: 240px 120px;
 }
 .a,.b{
-	height: 80px;
-	width: 80px;
+	height: 120px;
+	width: 120px;
 	display: block;
 	position: absolute;
 }
 .a{
-	left: 80px;
-	top: 240px;
+	left: 120px;
+	top: 360px;
 }
 .b{
-	left: 160px;
-	top: 240px;
+	left: 240px;
+	top: 360px;
 }
 .title{
-	height: 60px;
-	background: url(title.png);
+	height: 90px;
+	background: url('img/title.png');
+	background-size:480px 90px ;
 }
 .JJ{
-	width: 256px;
+	width: 384px;
 	margin: 0 auto;
 	text-indent: 28px;
 }
 .shici{
-	width: 170px;
+	width: 255px;
 	margin: 0 auto;
 }
-p.o{
-	text-indent: 40px;
-}
 p{
-line-height:14px;
+line-height:20px;text-align: center;
 }
 a{
 	display: block;
-	width: 65px;
-	height: 20px;
+	width: 100px;
+	height: 30px;
 	position: absolute;
-	top: 360px;
-	left: 130px;
+	top: 540px;
+	left: 200px;
 	text-decoration: none;
 }
 #kaishi{
 	border: 0;
-	border-radius: 3px;
-	padding: 5px;
+	border-radius: 5px;
+	padding: 8px;
 	cursor: auto;
 	font-family:"微软雅黑" ;
 }
@@ -119,29 +119,29 @@ a:hover #kaishi{
 }
 .number{
 	position: absolute;
-	left: 20px;
-	bottom: 20px;
+	left: 30px;
+	bottom: 30px;
 }
 span{
 	padding-left:5px;
 	padding-right:5px;
 }
 .sele{
-	width: 200px;
+	width: 300px;
 	margin:0 auto;
-	margin-top:30px;
+	margin-top:45px;
 	
 }
 .sele select{
 	border-radius:3px;
 	font-family: "微软雅黑";
 	border:0;
-	width: 94px;
+	width: 145px;
 	appearance:none;
 	-moz-appearance:none;
 	-webkit-appearance:none;
-	line-height: 20px;
-	height: 20px;
+	line-height: 30px;
+	height: 30px;
 }
 select::-ms-expand{
 	display: none;
